--- a/exam.html
+++ b/exam.html
@@ -1,4 +1,4 @@
-                                                        <!-- OBLIGATOIRE 
+<!-- OBLIGATOIRE 
 !!! Copier d'abord les fichiers dans le volume !!!
 
 GIT
@@ -9,6 +9,22 @@ git checkout -b main
 git commit -m"first commit"
 git remote add origin ************
 git push origin main
+
+
+
+
+
+Nom de l’élément	Description
+header	            Représente l’en-tête ou le haut d’une page
+nav	                Représente un menu de navigation dans une page
+main	            Représente le contenu principal de l’élément body
+section	            Représente une section dans une page, c’est-à-dire un groupement thématique de contenu
+article	            Représente une partie de page qui se suffit à elle-même, comme un post sur un blog par exemple
+aside	            Représente une partie de contenu non lié au reste
+footer	            Représente le pied d’une page
+
+
+
 
                                                         OBLIGATOIRE -->
 
@@ -21,7 +37,7 @@ git push origin main
 
 <!DOCTYPE html>
 <html lang="fr">
-<!-- OBLIGATOIRE fr !!! 
+<!-- OBLIGATOIRE fr !!! -->
 
 
 
